--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
  
   	
-    <a class="navbar-brand text-dark  m-5 btn btn-outline-light" href="birthday.html">HOME</a>
+    <a class="navbar-brand text-dark  m-5 btn btn-outline-light" href="index.html">HOME</a>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
